[fix] horizontal scroll on some resolutions

--- a/src/styles/blocks/main-content.scss
+++ b/src/styles/blocks/main-content.scss
@@ -1,3 +1,7 @@
+.main-content {
+  max-width: 100%;
+}
+
 @media screen and (min-width: 670px) {
   .main-content {
     display: flex;
