--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -63,6 +63,9 @@ a {
     width: 960px;
     margin: 0 auto; } }
 
+.main-content {
+  max-width: 100%; }
+
 @media screen and (min-width: 670px) {
   .main-content {
     display: flex;
